Changed model fields to all use lower case

--- a/App/templates/CreateReview.html
+++ b/App/templates/CreateReview.html
@@ -324,7 +324,7 @@
     <script>
 
       function fetchStudentName() {
-          const studentID = document.getElementById('studentID').value;
+          const studentID = document.getElementById('studentid').value;
 
           // Send AJAX request to Flask server
           fetch('/get_student_name', {
