--- a/App/templates/IncidentReport.html
+++ b/App/templates/IncidentReport.html
@@ -172,7 +172,7 @@
 </body>
   <script>
     function fetchStudentName() {
-        const studentID = document.getElementById('studentID').value;
+        const studentID = document.getElementById('studentid').value;
 
         // Send AJAX request to Flask server
         fetch('/get_student_name', {
