Implemented Write Review Page + Necessary updates to views + Fixed Recent Reviews tab

--- a/App/templates/staff_home.html
+++ b/App/templates/staff_home.html
@@ -106,13 +106,13 @@
               </div>
 
               <div class = "pane-controls">
-                <div class="button-compound key hover">
+                <a class="button-compound key hover" href="/write">
                 
                     <div class="button-compound-text">
                         WRITE REVIEW
                     </div>
                 
-                </div>            
+                </a>            
               </div>
     
             </div>
