Fixed ranking issue

--- a/App/templates/ranking_list.html
+++ b/App/templates/ranking_list.html
@@ -1,5 +1,5 @@
-{% if students %}
-    {% for student in students %}
+{% if rankings %}
+    {% for student in rankings %}
     <div class ="list-item">
         <a class = "list-item-link" href="/student/all/{{student.id}}">
             <div class = "labelled-list-item">
