--- a/App/static/style.css
+++ b/App/static/style.css
@@ -2,7 +2,7 @@
 {
   --primary: #17995c;
   --secondary: #57E6A7;
-  --secondary2: #e65797;
+  --secondary2: #e82a3d;
   --secondary3: #57E6A7;
   --base: #F8F9FA;
   --shadow: #D6DCE5;
@@ -431,12 +431,12 @@ body
 {
   cursor: pointer;
   /* background-color: #F8F9FA; */
-  width: 99%;
+  width: 95%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: left;
-  margin: 5px 0px;
+  padding: 5px 0px;
   /* border-radius: 10px;
   border-style: solid;
   border-width: 2px;
@@ -453,29 +453,28 @@ body
     /* color: #D6DCE5;*/
 }
 
-.list-item:active
+.list-item.active
 {
     border-radius: 10px;
     /* border-style: solid;
     border-width: 2px;
     border-color: #333F50; */
-    background-color: var(--primary);
-    color: var(--base);
+    background-color: var(--shadow);
 }
 
 .list-item-link
 {
-    text-decoration: inherit;
-    color: inherit;
-    height: 10%;
-    width:90%;
-    /* background-color: blue;
-    color: #D6DCE5; */
-    text-align: left;
-    font-weight: bolder;
-    line-height: 100%;
-    margin:15px;
-    }
+  text-decoration: inherit;
+  color: inherit;
+  height: 10%;
+  width:90%;
+  /* background-color: blue;
+  color: #D6DCE5; */
+  text-align: left;
+  font-weight: bolder;
+  line-height: 100%;
+  padding:15px;
+}
 
 .labelled-list-item
 {
