--- a/App/templates/my_review_list.html
+++ b/App/templates/my_review_list.html
@@ -14,10 +14,12 @@
                 {% endif %}
                 <div>
                     <div style="margin:5px;">
-                        {{students[review.student_id-1].student_id}}
+                        {% set this_student = jinja_get_student(review.student_id) %}
+                        {{this_student.student_id}}
                     </div>
                     <div style="margin:5px;">
-                        {{users[review.staff_id-1].firstname}} {{users[review.staff_id-1].lastname}}
+                        {% set this_staff = jinja_get_staff(review.staff_id) %}
+                        {{this_staff.firstname}} {{this_staff.lastname}}
                     </div>
                     <div style="margin:5px;font-style: italic;">
                         "{{review.details}}"
