--- a/App/templates/nav.html
+++ b/App/templates/nav.html
@@ -13,6 +13,9 @@
         <a class="nav-link" href = "/staff/all">BROWSE STAFF</a>
         <a class="nav-link" href = "/review/all">BROWSE REVIEWS</a>
         <a class="nav-link" href = "/student/all">BROWSE STUDENTS</a>
+        {% if current_user.user_type == 'staff'%}
+        <a class="nav-link" href = "/write">WRITE REVIEW</a>
+        {% endif %}
         <a class="nav-link" href = "/logout">LOG OUT</a>
     </div>
 
