--- a/App/templates/review_list.html
+++ b/App/templates/review_list.html
@@ -1,6 +1,6 @@
 {% if reviews %}
     {% for review in reviews %}
-    <div class ="list-item">
+    <div class ="list-item {% if selected.id == review.id %}active{% endif %}">
         <a class = "list-item-link" href="/review/all/{{review.id}}">
             <div class = "labelled-list-item">
                 {% if review.points > 0 %}
@@ -14,7 +14,8 @@
                 {% endif %}
                 <div>
                     <div style="margin:5px;">
-                        {{students[review.student_id-1].student_id}}
+                        {% set this_student = jinja_get_student(review.student_id) %}
+                        {{this_student.student_id}}
                     </div>
                     <div style="margin:5px;">
                         {{users[review.staff_id-1].firstname}} {{users[review.staff_id-1].lastname}}
