--- a/App/templates/staff_list.html
+++ b/App/templates/staff_list.html
@@ -1,6 +1,6 @@
 {% if staff %}
     {% for person in staff %}
-    <div class ="list-item">
+    <div class ="list-item {% if selected.id == person.id %}active{% endif %}">
         <a class = "list-item-link" href="/staff/all/{{person.id}}">
             {{person.firstname}} {{person.lastname}}
         </a>
