--- a/App/templates/student_list.html
+++ b/App/templates/student_list.html
@@ -1,6 +1,6 @@
 {% if students %}
     {% for student in students %}
-    <div class ="list-item">
+    <div class ="list-item {% if selected.id == student.id %}active{% endif %}">
         <a class = "list-item-link" href="/student/all/{{student.id}}">
             {{student.student_id}}
         </a>
