Sign Up Page + More fixes

--- a/App/templates/login.html
+++ b/App/templates/login.html
@@ -210,9 +210,12 @@
       <input name="username" id="username" type="text" placeholder="Username">
       <p> Password</p>
       <input name="password" id="password" type="password" placeholder="Password">
-      <button type="submit" href="/login">
+      <button class = "button-compound" type="submit" href="/login">
           Submit
       </button>
+      <div>
+        <a href="/signup">Don't have an account? Click here to sign up as a staff member</a>
+      </div>
     {% if message %}
     <div class="message-container">
         <div class="message">
